--- a/aframework/aframework-dubbo/aframework-dubbo-consumer/pom.xml
+++ b/aframework/aframework-dubbo/aframework-dubbo-consumer/pom.xml
@@ -16,7 +16,7 @@
 
          <!--aframework-->
          <dependency>
-             <groupId>org.aframework.domain</groupId>
+             <groupId>com.alvis</groupId>
              <artifactId>aframework-domain</artifactId>
              <version>${aframework-domain.version}</version>
          </dependency>
