--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.aframework</groupId>
+    <groupId>com.alvis</groupId>
     <artifactId>aframework</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
@@ -86,7 +86,6 @@
         <module>aframework-web</module>
         <module>aframework-admin</module>
         <module>all</module>
-        <module>aframework-dubbo</module>
         <module>aframework-dubbo</module>
     </modules>
 
