--- a/aframework/aframework-api/pom.xml
+++ b/aframework/aframework-api/pom.xml
@@ -4,13 +4,13 @@
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.aframework</groupId>
+        <groupId>com.alvis</groupId>
         <artifactId>aframework</artifactId>
         <version>1.0.0</version>
     </parent>
 
     <version>1.0.1</version>
-    <groupId>org.aframework.api</groupId>
+    <groupId>com.alvis</groupId>
     <artifactId>aframework-api</artifactId>
     <name>Archetype - aframework-api</name>
     <packaging>war</packaging>
@@ -18,22 +18,22 @@
     <dependencies>
         <!-- aframework -->
         <dependency>
-            <groupId>org.aframework.domain</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-domain</artifactId>
             <version>${aframework-domain.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aframework.service</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-service</artifactId>
             <version>${aframework-service.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aframework.core</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-core</artifactId>
             <version>${aframework-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aframework.configure</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-configure</artifactId>
             <version>${aframework-configure.version}</version>
         </dependency>
