--- a/aframework/aframework-dubbo/pom.xml
+++ b/aframework/aframework-dubbo/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>aframework</artifactId>
-        <groupId>org.aframework</groupId>
+        <groupId>com.alvis</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
