--- a/aframework/aframework-service/pom.xml
+++ b/aframework/aframework-service/pom.xml
@@ -4,12 +4,12 @@
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.aframework</groupId>
+        <groupId>com.alvis</groupId>
         <artifactId>aframework</artifactId>
         <version>1.0.0</version>
     </parent>
     <version>1.0.0</version>
-    <groupId>org.aframework.service</groupId>
+    <groupId>com.alvis</groupId>
     <artifactId>aframework-service</artifactId>
     <name>Archetype - aframework-service</name>
     <packaging>jar</packaging>
@@ -18,17 +18,17 @@
 
         <!--aframework-->
         <dependency>
-            <groupId>org.aframework.core</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-core</artifactId>
             <version>${aframework-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aframework.domain</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-domain</artifactId>
             <version>${aframework-domain.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.aframework.data</groupId>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-data</artifactId>
             <version>${aframework-data.version}</version>
         </dependency>
