--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -52,6 +52,33 @@
 
     </properties>
 
+    <profiles>
+        <profile>
+            <!-- 本地开发环境 -->
+            <id>dev</id>
+            <properties>
+                <profiles.active>dev</profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <!-- 测试环境 -->
+            <id>test</id>
+            <properties>
+                <profiles.active>test</profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <!-- 生产环境 -->
+            <id>product</id>
+            <properties>
+                <profiles.active>product</profiles.active>
+            </properties>
+        </profile>
+    </profiles>
+
     <!-- 阿里云maven仓库 -->
     <repositories>
         <repository>
@@ -365,9 +392,6 @@
             <artifactId>jul-to-slf4j</artifactId>
         </dependency>
 
-
-
-
     </dependencies>
 
     <build>
@@ -391,14 +415,14 @@
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
+<!--        <resources>
             <resource>
                 <directory>src/main/java</directory>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
-        </resources>
+        </resources>-->
     </build>
 
 
