--- a/aframework/aframework-web/pom.xml
+++ b/aframework/aframework-web/pom.xml
@@ -33,6 +33,11 @@
         </dependency>
         <dependency>
             <groupId>com.alvis</groupId>
+            <artifactId>aframework-data</artifactId>
+            <version>${aframework-data.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alvis</groupId>
             <artifactId>aframework-configure</artifactId>
             <version>${aframework-configure.version}</version>
         </dependency>
