--- a/aframework/aframework-service/src/test/resources/database.properties
+++ b/aframework/aframework-service/src/test/resources/database.properties
@@ -1,16 +1,16 @@
 # AFData
 #master-slave
-jdbc.master.afdata.url=jdbc:mysql://192.168.199.69:3306/afdata?useUnicode=true&characterEncoding=utf-8
-jdbc.master.afdata.username=root
+jdbc.master.afdata.url=jdbc:postgresql://192.168.199.70:5432/afdata
+jdbc.master.afdata.username=postgres
 jdbc.master.afdata.password=123456
 
 # AFOrder
 # master-salve
-jdbc.master.aforder.url=jdbc:mysql://192.168.199.69:3306/aforder?useUnicode=true&characterEncoding=utf-8
-jdbc.master.aforder.username=root
+jdbc.master.aforder.url=jdbc:postgresql://192.168.199.70:5432/aforder
+jdbc.master.aforder.username=postgres
 jdbc.master.aforder.password=123456
 
 #redis db
-redis.hostName=192.168.199.69
+redis.hostName=192.168.199.70
 redis.port=6379
 redis.password=123456
