--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -16,8 +16,8 @@
         <spring-restdoc.version>1.2.1.RELEASE</spring-restdoc.version>
 
         <mybatis.version>3.4.0</mybatis.version>
-        <mybatis-spring.version>1.3.0</mybatis-spring.version>
-        <mysql.version>5.1.26</mysql.version>
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
+        <postgresql.version>42.2.1</postgresql.version>
         <sharding-jdbc.version>1.5.1</sharding-jdbc.version>
 
         <springframework.version>4.3.10.RELEASE</springframework.version>
@@ -25,7 +25,6 @@
         <redis-clients.version>2.9.0</redis-clients.version>
         <jackson.version>2.8.9</jackson.version>
 
-        <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <druid.version>1.1.2</druid.version>
         <slf4j.version>1.7.7</slf4j.version>
         <shiro.version>1.3.2</shiro.version>
@@ -200,9 +199,9 @@
 
             <!--jdbc-->
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -338,7 +337,6 @@
                 <artifactId>zkclient</artifactId>
                 <version>0.1</version>
             </dependency>
-
 
         </dependencies>
     </dependencyManagement>
