--- a/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,11 @@
     </servlet>
 
     <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/content/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
