--- a/aframework/all/pom.xml
+++ b/aframework/all/pom.xml
@@ -37,7 +37,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+                    <packagingExcludes>WEB-INF/api.xml</packagingExcludes>
                     <overlays>
                         <overlay>
                             <groupId>com.alvis</groupId>
