--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -324,6 +324,11 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.2</version>
+            </dependency>
 
 
             <!-- dubbo -->
