add serial commpent

--- a/aframework/aframework-core/pom.xml
+++ b/aframework/aframework-core/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>spring-tx</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
