--- a/aframework/aframework-core/pom.xml
+++ b/aframework/aframework-core/pom.xml
@@ -40,7 +40,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+        </dependency>
 
     </dependencies>
 
