--- a/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,7 @@
     </filter>
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </filter-mapping>
 
 
@@ -69,7 +69,7 @@
 
     <filter-mapping>
         <filter-name>encodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </filter-mapping>
 
 
@@ -81,14 +81,17 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>/content/*</url-pattern>
-    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
+   <!-- 静态资源-->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/content/*</url-pattern>
     </servlet-mapping>
 
 
@@ -99,8 +102,9 @@
 
     <servlet-mapping>
         <servlet-name>DruidStatView</servlet-name>
-        <url-pattern>/druid/*</url-pattern>
+        <url-pattern>/druid/</url-pattern>
     </servlet-mapping>
+
 
 
     <session-config>
