--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -329,6 +329,11 @@
                 <artifactId>gson</artifactId>
                 <version>2.8.2</version>
             </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.5.0-b01</version>
+            </dependency>
 
 
             <!-- dubbo -->
