1.add hibernate vaulite 2.change url inspace

--- a/aframework/aframework-admin/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-admin/src/main/webapp/WEB-INF/web.xml
@@ -81,9 +81,17 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
+    <!-- 静态资源-->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/content/*</url-pattern>
     </servlet-mapping>
 
 
