--- a/aframework/aframework-configure/pom.xml
+++ b/aframework/aframework-configure/pom.xml
@@ -122,6 +122,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
         <!-- tools end -->
 
     </dependencies>
