--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -334,6 +334,12 @@
                 <artifactId>mail</artifactId>
                 <version>1.5.0-b01</version>
             </dependency>
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>6.0.8.Final</version>
+            </dependency>
+
 
 
             <!-- dubbo -->
