add freemaker tag

--- a/aframework/aframework-configure/pom.xml
+++ b/aframework/aframework-configure/pom.xml
@@ -111,6 +111,11 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.mingsoft</groupId>
+            <artifactId>shiro-freemarker-tags</artifactId>
+        </dependency>
         <!-- admin end -->
 
         <!-- tools begin -->
