--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -234,6 +234,11 @@
                 <artifactId>shiro-spring</artifactId>
                 <version>${shiro.version}</version>
             </dependency>
+            <dependency>
+                <groupId>net.mingsoft</groupId>
+                <artifactId>shiro-freemarker-tags</artifactId>
+                <version>0.1</version>
+            </dependency>
 
 
             <!--  web  -->
