--- a/aframework/aframework-admin/pom.xml
+++ b/aframework/aframework-admin/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- spring unit end -->
 
     </dependencies>
