--- a/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
@@ -42,22 +42,18 @@
     </listener>
 
 
-    <!-- 添加shiro过滤器 -->
+    <!-- Spring-security -->
     <filter>
-        <filter-name>shiroFilter</filter-name>
+        <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <init-param>
-            <!-- 该值缺省为false，表示声明周期由SpringApplicationContext管理，设置为true表示ServletContainer管理 -->
-            <param-name>targetFilterLifecycle</param-name>
-            <param-value>true</param-value>
-        </init-param>
     </filter>
+
     <filter-mapping>
-        <filter-name>shiroFilter</filter-name>
+        <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
+    <!-- encodingFilter -->
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
