--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -349,7 +349,16 @@
                 <artifactId>hibernate-validator</artifactId>
                 <version>6.0.8.Final</version>
             </dependency>
-
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>javax.el-api</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>el-api</artifactId>
+                <version>2.2</version>
+            </dependency>
 
 
             <!-- dubbo -->
