--- a/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 
 
     <!-- Spring-security -->
-    <filter>
+<!--    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
@@ -51,7 +51,7 @@
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
     <!-- encodingFilter -->
     <filter>
