--- a/aframework/pom.xml
+++ b/aframework/pom.xml
@@ -19,7 +19,7 @@
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <postgresql.version>42.2.1</postgresql.version>
         <sharding-jdbc.version>1.5.1</sharding-jdbc.version>
-
+        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
         <springframework.version>4.3.10.RELEASE</springframework.version>
         <springframework.security.version>4.2.4.RELEASE</springframework.security.version>
         <springframework-redis.version>1.8.4.RELEASE</springframework-redis.version>
@@ -222,7 +222,6 @@
             </dependency>
 
 
-
             <!--jdbc-->
             <dependency>
                 <groupId>org.postgresql</groupId>
@@ -242,8 +241,6 @@
                 <artifactId>jedis</artifactId>
                 <version>${redis-clients.version}</version>
             </dependency>
-
-
 
 
             <!--  web  -->
@@ -286,10 +283,21 @@
                 <artifactId>jstl</artifactId>
                 <version>1.2</version>
             </dependency>
+            <!-- thymeleaf-->
             <dependency>
-                <groupId>org.freemarker</groupId>
-                <artifactId>freemarker</artifactId>
-                <version>2.3.26-incubating</version>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf</artifactId>
+                <version>${thymeleaf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf-spring4</artifactId>
+                <version>${thymeleaf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>nz.net.ultraq.thymeleaf</groupId>
+                <artifactId>thymeleaf-layout-dialect</artifactId>
+                <version>2.3.0</version>
             </dependency>
 
 
