webAppRootKey 部署tomcat 冲突

--- a/aframework/aframework-admin/src/main/webapp/WEB-INF/web.xml
+++ b/aframework/aframework-admin/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 
     <context-param>
         <param-name>webAppRootKey</param-name>
-        <param-value>webPath</param-value>
+        <param-value>adminPath</param-value>
     </context-param>
 
     <listener>
