--- a/aframework/aframework-configure/src/main/resources/development/log4j.properties
+++ b/aframework/aframework-configure/src/main/resources/development/log4j.properties
@@ -3,14 +3,14 @@ log4j.rootLogger=DEBUG,stdout,info,warn,error
 #Stdout
 log4j.additivity.stdout=false
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.${catalina.home}=System.out
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 
 #Info
 log4j.additivity.info=false
 log4j.logger.info=info
 log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.File = target/logs/info.log
+log4j.appender.info.File = ${catalina.home}/logs/info.log
 log4j.appender.info.datePattern='.'yyyy-MM-dd
 log4j.appender.info.append=true
 log4j.appender.info.Threshold=INFO
@@ -20,7 +20,7 @@ log4j.appender.info.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss}] %l %m
 #Warn
 log4j.additivity.warn=false
 log4j.appender.warn=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.warn.File = target/logs/warn.log
+log4j.appender.warn.File = ${catalina.home}/logs/warn.log
 log4j.appender.warn.datePattern='.'yyyy-MM-dd
 log4j.appender.warn.append=true
 log4j.appender.warn.Threshold=WARN
@@ -30,7 +30,7 @@ log4j.appender.warn.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss}] %l %m
 #Error
 log4j.additivity.error=false
 log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.error.File = target/logs/error.log
+log4j.appender.error.File = ${catalina.home}/logs/error.log
 log4j.appender.error.datePattern='.'yyyy-MM-dd
 log4j.appender.error.append=true
 log4j.appender.error.Threshold=ERROR
