--- a/aframework/aframework-configure/src/main/resources/development/log4j.properties
+++ b/aframework/aframework-configure/src/main/resources/development/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,stdout,info,warn,error
+log4j.rootLogger=Info,stdout,info,warn,error
 
 #Stdout
 log4j.additivity.stdout=false
@@ -38,7 +38,18 @@ log4j.appender.error.layout=org.apache.log4j.PatternLayout
 log4j.appender.error.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss}] %l %m %n
 
 # MyBatis
-log4j.logger.org.mybatis=DEBUG 
+log4j.logger.com.repository=DEBUG
+log4j.logger.com.springframework=DEBUG
+log4j.logger.com.ibatis=DEBUG  
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG  
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG  
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG  
+log4j.logger.java.sql.Connection=DEBUG  
+log4j.logger.java.sql.Statement=DEBUG  
+log4j.logger.java.sql.PreparedStatement=DEBUG  
+log4j.logger.java.sql.ResultSet=DEBUG
+log4j.logger.org.apache.ibatis.logging.commons.JakartaCommonsLoggingImpl=DEBUG
+log4j.logger.java.sql=DEBUG,CONSOLE 
 
 #JdbcTemplate
 log4j.logger.org.springframework.jdbc.core=DEBUG
